--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,13 +51,13 @@
   }
 
   html[data-theme='dark'] {
-    --background: 0 0% 3.9%;
+    --background: 225, 46.15%, 10.2%;
     --foreground: 0 0% 98%;
 
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 0 0% 3.9%;
+    --popover: 225, 46.15%, 10.2%;
     --popover-foreground: 0 0% 98%;
 
     --primary: 222, 100%, 60%;
