--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,11 +43,11 @@
 }
 
 .hero__title {
-  @apply 2xl:text-[72px] md:text-[48px] sm:text-[64px] text-[50px] font-extrabold;
+  @apply 2xl:text-[48px] md:text-[32px] sm:text-[52] text-[50px] font-extrabold;
 }
 
 .hero__subtitle {
-  @apply text-[27px] text-black-100 font-light mt-5;
+  @apply text-[16px] text-black-100 font-light mt-5;
 }
 
 .hero__image-container {
